--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/check": "^0.7.0",
     "@astrojs/markdown-remark": "^5.2.0",
     "@astrojs/mdx": "^3.1.2",
+    "@astrojs/partytown": "^2.1.2",
     "@astrojs/react": "^3.6.2",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.6",
@@ -33,6 +34,7 @@
     "@types/react-dom": "^18.3.0",
     "astro": "^4.11.3",
     "astro-icon": "^1.1.1",
+    "astro-seo": "^0.8.4",
     "bootstrap-icons": "^1.11.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
