--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@shikijs/transformers": "^1.16.3",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@unpic/astro": "^0.0.47",
     "astro": "^4.11.3",
     "astro-icon": "^1.1.1",
     "astro-seo": "^0.8.4",
