--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "@hbsnow/rehype-sectionize": "^1.0.7",
     "@iconify-json/lucide": "^1.2.4",
+    "@playform/inline": "^0.1.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
