--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@astrojs/tailwind": "^5.1.2",
     "@hbsnow/rehype-sectionize": "^1.0.7",
     "@iconify-json/lucide": "^1.2.4",
+    "@iconify-json/tabler": "^1.2.8",
     "@playform/inline": "^0.1.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -35,7 +36,6 @@
     "@types/react-dom": "^18.3.0",
     "@unpic/astro": "^0.0.47",
     "astro": "^4.16.14",
-    "astro-icon": "^1.1.1",
     "astro-seo": "^0.8.4",
     "bootstrap-icons": "^1.11.3",
     "class-variance-authority": "^0.7.0",
@@ -58,6 +58,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
     "@types/xml2js": "^0.4.14",
+    "astro-icon": "^1.1.2",
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0",
     "prettier-plugin-astro-organize-imports": "^0.4.9",
