--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@rehype-pretty/transformers": "^0.13.2",
     "@shikijs/transformers": "^1.16.3",
+    "@swup/astro": "^1.5.0",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@unpic/astro": "^0.0.47",
