--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.16.14",
+    "astro-feelback": "^0.3.4",
     "astro-hover-prefetch": "^1.0.7",
     "astro-seo": "^0.8.4",
     "bootstrap-icons": "^1.11.3",
