--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@astrojs/rss": "^4.0.9",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.1.2",
+    "@feelback/react": "^0.3.4",
     "@hbsnow/rehype-sectionize": "^1.0.7",
     "@iconify-json/lucide": "^1.2.4",
     "@iconify-json/tabler": "^1.2.8",
