--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "lucide-react": "^0.441.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.1",
     "rehype-external-links": "^3.0.0",
     "rehype-katex": "^7.0.0",
     "rehype-pretty-code": "^0.14.0",
@@ -61,6 +62,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
+    "@types/react-router-dom": "^5.3.3",
     "@types/xml2js": "^0.4.14",
     "astro-icon": "^1.1.2",
     "prettier": "^3.2.5",
