--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@feelback/react": "^0.3.4",
     "@hbsnow/rehype-sectionize": "^1.0.7",
     "@iconify-json/lucide": "^1.2.4",
+    "@iconify-json/ri": "^1.2.5",
     "@iconify-json/tabler": "^1.2.8",
     "@playform/inline": "^0.1.0",
     "@radix-ui/react-avatar": "^1.1.0",
