--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.3",
     "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-intersect": "^2.1.0",
     "typescript": "^5.4.5",
     "xml2js": "^0.6.2"
   },
