--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "clsx": "^2.1.1",
     "limiter": "^3.0.0",
     "lucide-react": "^0.441.0",
+    "marked": "^15.0.7",
     "photoswipe": "^5.4.4",
+    "photoswipe-dynamic-caption-plugin": "^1.2.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
