--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "limiter": "^3.0.0",
     "lucide-react": "^0.441.0",
     "marked": "^15.0.7",
+    "medium-zoom": "^1.1.0",
     "photoswipe": "^5.4.4",
     "photoswipe-dynamic-caption-plugin": "^1.2.7",
     "react": "^18.3.1",
