--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "fast-xml-parser": "^5.0.6",
+    "fontaine": "^0.5.0",
     "limiter": "^3.0.0",
     "lucide-react": "^0.441.0",
     "marked": "^15.0.7",
