--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@expressive-code/plugin-line-numbers": "^0.40.1",
     "@feelback/react": "^0.3.4",
     "@hbsnow/rehype-sectionize": "^1.0.7",
+    "@iconify-json/cil": "^1.2.2",
+    "@iconify-json/fa6-solid": "^1.2.3",
     "@iconify-json/lucide": "^1.2.4",
     "@iconify-json/ri": "^1.2.5",
     "@iconify-json/tabler": "^1.2.8",
